@@ -1,4 +1,5 @@
 0.3-1
+- add riley dataset
 - generalize tidem() argument list
 - read.adv.nortek() handle burst-mode data
 - add datasets wilson, redfieldNP, redfieldNC, and redfieldPlankton
